unpackaged/main/default/objects/Operational_Tracking__c/Operational_Tracking__c.object-meta.xml
<CustomObject>
    <label>Operational Tracking</label>
    <nameField>
        <displayFormat>OT-{000000}</displayFormat>
        <label>Operational Tracking ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Operational Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>