unpackaged/main/default/objects/Operational_Tracking__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <inlineHelpText>If Operational Margin then PO Date
If Sent Back Quotes then Sent Back Date
If Training then Date of Training</inlineHelpText>
    <label>Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>