unpackaged/main/default/objects/Operational_Tracking__c/fields/Order_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_PO_Number__c</fullName>
    <label>Order/PO Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>