unpackaged/main/default/objects/Operational_Tracking__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Billing Email</fullName>
            </value>
            <value>
                <fullName>Email Error</fullName>
            </value>
            <value>
                <fullName>EU Info</fullName>
            </value>
            <value>
                <fullName>Expired quote</fullName>
            </value>
            <value>
                <fullName>Incorrect Supplier</fullName>
            </value>
            <value>
                <fullName>Invalid line item</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
            <value>
                <fullName>PO</fullName>
            </value>
            <value>
                <fullName>Rep Requested</fullName>
            </value>
            <value>
                <fullName>Serial Numbers Missing</fullName>
            </value>
            <value>
                <fullName>She requested as another  bill only orders was created for in the invoice.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>