unpackaged/main/default/objects/Operational_Tracking__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If Type is Training then set this to person providing the training
If Type is Sent Back Quotes then set this to the Sales Rep whose Quote it was
If Type is Sales Tax Issue then set this to the Sales Rep who had the issue</inlineHelpText>
    <label>Resource</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Operational_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>