unpackaged/main/default/objects/Operational_Tracking__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email Error</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
            <value>
                <fullName>Operational Margin</fullName>
            </value>
            <value>
                <fullName>Operations Error</fullName>
            </value>
            <value>
                <fullName>Sales Tax Issue</fullName>
            </value>
            <value>
                <fullName>Sent Back Quotes</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>