unpackaged/main/default/objects/Operational_Tracking__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Operational Tracking</relationshipLabel>
    <relationshipName>Operational_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>