unpackaged/main/default/objects/Operational_Tracking__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <group>Executive_Team</group>
        <group>Operations_Managers</group>
    </sharedTo>
</ListView>