unpackaged/main/default/objects/Operational_Tracking__c/listViews/Miscellaneous.listView-meta.xml
<ListView>
    <fullName>Miscellaneous</fullName>
    <columns>NAME</columns>
    <columns>Resource__c</columns>
    <columns>Date__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Miscellaneous</value>
    </filters>
    <label>Miscellaneous</label>
    <sharedTo>
        <group>Operations_Managers</group>
    </sharedTo>
</ListView>