unpackaged/main/default/objects/Operational_Tracking__c/listViews/Operational_Margin.listView-meta.xml
<ListView>
    <fullName>Operational_Margin</fullName>
    <columns>NAME</columns>
    <columns>Vendor__c</columns>
    <columns>Amount__c</columns>
    <columns>Order_PO_Number__c</columns>
    <columns>Date__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Geo__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Operational Margin</value>
    </filters>
    <label>Operational Margin</label>
    <sharedTo>
        <group>Operations_Managers</group>
    </sharedTo>
</ListView>