unpackaged/main/default/objects/Operational_Tracking__c/listViews/Sales_Tax_Issues.listView-meta.xml
<ListView>
    <fullName>Sales_Tax_Issues</fullName>
    <columns>NAME</columns>
    <columns>Resource__c</columns>
    <columns>Geo__c</columns>
    <columns>Date__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Sales Tax Issue</value>
    </filters>
    <label>Sales Tax Issues</label>
    <sharedTo>
        <group>Operations_Managers</group>
    </sharedTo>
</ListView>