unpackaged/main/default/objects/Operational_Tracking__c/listViews/Sent_Back_Quotes.listView-meta.xml
<ListView>
    <fullName>Sent_Back_Quotes</fullName>
    <columns>NAME</columns>
    <columns>Order_PO_Number__c</columns>
    <columns>Resource__c</columns>
    <columns>Date__c</columns>
    <columns>Reason__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Sent Back Quotes</value>
    </filters>
    <label>Sent Back Quotes</label>
    <sharedTo>
        <group>Operations_Managers</group>
    </sharedTo>
</ListView>