unpackaged/main/default/objects/Operational_Tracking__c/listViews/Training.listView-meta.xml
<ListView>
    <fullName>Training</fullName>
    <columns>NAME</columns>
    <columns>Training_Type__c</columns>
    <columns>Resource__c</columns>
    <columns>Date__c</columns>
    <columns>Number_of_Attendees__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Training</value>
    </filters>
    <label>Training</label>
    <sharedTo>
        <group>Operations_Managers</group>
    </sharedTo>
</ListView>